--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,110 +1,112 @@
-version: '3.9'
+version: "3.8"
 
 services:
-  # -----------------------
-  # Cassandra для кэширования
-  # -----------------------
+  # -----------------------------
+  # Cassandra
+  # -----------------------------
   cassandra:
-    image: cassandra:latest
-    container_name: messaging_cassandra
+    image: cassandra:4.1
+    container_name: cassandra
     ports:
-      - "9042:9042"
-    networks:
-      - messaging_net
+      - "9042:9042"    # Доступ к Cassandra с хоста на порт 9042
+    environment:
+      CASSANDRA_DC: DC1
+      CASSANDRA_CLUSTER_NAME: MessagingCluster
     volumes:
       - cassandra_data:/var/lib/cassandra
-    environment:
-      CASSANDRA_CLUSTER_NAME: "MessagingCluster"
 
-  # -----------------------
-  # Zookeeper (для Kafka)
-  # -----------------------
+  # -----------------------------
+  # Zookeeper
+  # -----------------------------
+
   zookeeper:
-    image: bitnami/zookeeper:latest
-    container_name: messaging_zookeeper
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: zookeeper
     environment:
-      ALLOW_ANONYMOUS_LOGIN: "yes"
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
     ports:
       - "2181:2181"
-    networks:
-      - messaging_net
 
-  # -----------------------
-  # Kafka
-  # -----------------------
+
+    # -------------------------------------
+    #              Kafka
+    # -------------------------------------
   kafka:
-    image: bitnami/kafka:latest
-    container_name: messaging_kafka
-    depends_on:
-      - zookeeper
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      ALLOW_PLAINTEXT_LISTENER: "yes"
-    ports:
-      - "9092:9092"
-    networks:
-      - messaging_net
+      image: confluentinc/cp-kafka:7.4.0
+      container_name: kafka
+      depends_on:
+        - zookeeper
+      ports:
+        - "9092:9092"
+      environment:
+        KAFKA_BROKER_ID: 1
+        KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+        KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
-  # -----------------------
+
+    # --------------------------------
   # Kafka UI
-  # -----------------------
+  # --------------------------------
   kafka_ui:
     image: provectuslabs/kafka-ui:latest
-    container_name: messaging_kafka_ui
+    container_name: kafka_ui
     depends_on:
       - kafka
     environment:
-      KAFKA_CLUSTERS_0_NAME: "MessagingKafkaCluster"
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "kafka:9092"
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
     ports:
-      - "8085:8085"
-    networks:
-      - messaging_net
+      - "8085:8080"
 
-  # -----------------------
-  # Jaeger для трасс
-  # -----------------------
-  jaeger:
-    image: jaegertracing/all-in-one:latest
-    container_name: messaging_jaeger
-    ports:
-      - "16686:16686"  # UI Jaeger
-      - "14268:14268"  # Точка приёма spans
-    networks:
-      - messaging_net
 
-  # -----------------------
-  # Микросервис обмена сообщениями
-  # -----------------------
   messaging_service:
-    build:
-      context: build
-      dockerfile: Dockerfile
-    container_name: messaging_service
+    build: .
+    container_name: serv_message
     depends_on:
       - cassandra
       - kafka
       - jaeger
-    environment:
-      SERVER_PORT: "8081"
-      POSTGRES_URL: "postgres://admin:456456@postgres:5432/auth_db?sslmode=disable up"
-      CASSANDRA_URL: "cassandra"
-      KAFKA_BROKERS: "kafka:9092"
-      JWT_SECRET: "supersecretkey"
-      JAEGER_URL: "http://jaeger:14268/api/traces"
     ports:
       - "8081:8081"
-    networks:
-      - messaging_net
-    # Можно добавить volume, если нужно.
+    environment:
+      SERVER_PORT: 8081
+      # Cassandra
+      CASSANDRA_URL: cassandra
+      # Kafka
+      KAFKA_BROKERS: kafka:9092
+      # Jaeger
+      JAEGER_URL: http://jaeger:14268/api/traces
+      # JWT Secret
+      JWT_SECRET: salt_secret
 
-networks:
-  messaging_net:
-    driver: bridge
+      POSTGRES_URL: postgres://admin:456456@postgres:5432/auth_db?sslmode=disable
+  # -----------------------------
+  # Jaeger
+  # -----------------------------
+  jaeger:
+    image: jaegertracing/all-in-one:1.44
+    container_name: jaeger
+    ports:
+      - "16686:16686"     # Web-интерфейс Jaeger (http://localhost:16686)
+      - "14268:14268"     # Порт для отправки трейсинга (Collector)
+  postgres:
+    image: postgres:latest
+    container_name: postgres_auth_service
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: 456456
+      POSTGRES_DB: auth_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
 
 volumes:
-  postgres_data:
   cassandra_data:
+  postgres_data:
+
+
+
